Fix HTML formatting and ensure proper structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="top-banner">
-        <img src="images/Syrian Arab Republic logo.jpg" alt="Logo" class="hero-image">
+        <img src="Syrian Arab Republic logo.jpg" alt="Logo" class="hero-image">
         <div class="overlay"></div>
     </div>
 
@@ -55,4 +55,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
