Fix image source path in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="top-banner">
-        <img src="Syrian Arab Republic logo.jpg" alt="Logo" class="hero-image">
+        <img src="images/Syrian Arab Republic logo.jpg" alt="Logo" class="hero-image">
         <div class="overlay"></div>
     </div>
 
@@ -57,3 +57,4 @@
 </body>
 
 </html>
+
